Fix resetting zIndex of text shapes on editing

We shouldn't reset zIndex of the shape when we only update it

BUG:408693